# ea-idl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MODEL.md  README.md  STRUCTURE.md  find_html_notes.py  hello.py  inspect_ea_notes.py  pyproject.toml  serve_docs.sh
.github/: copilot-instructions.md
config/: complete_example.yaml  mermaid_diagrams.yaml  native_diagrams.yaml  plantuml_diagrams.yaml  plantuml_docker.yaml  plantuml_remote.yaml  postgres.yaml  shared-spellcheck.yaml  sqlite.yaml  type_mapping_example.yaml  with-includes-example.yaml
examples/: config_with_abbreviations.yaml
scripts/: README.md  download_assets.py  export_diagrams.sh  export_diagrams_wine.py  preview_docs.py  test_mermaid.py
tests/: conftest.py  test_annotation_aliases.py  test_change.py  test_cli.py  test_diagram.py  test_diagram_builder.py  test_diagram_loading.py  test_diagram_model.py  test_diagrams_playwright.py  test_generate.py  test_html_diagrams_browser.py  test_html_export.py  test_html_utils.py  test_json_schema_importer.py  test_link_utils.py  test_load.py  test_mermaid_debug.py  test_mermaid_diagram.py  test_mermaid_diagram_special_chars.py  test_mermaid_renderer.py  test_mermaid_sanitization.py  test_mermaid_syntax.py  test_model.py  test_model_markdown.py  test_native_diagram.py  test_notes_export_import.py  test_plantuml_renderer.py  test_recursion.py  test_renderer_factory.py  test_scc_sorting.py  test_sorting.py  test_spellcheck.py  test_templates.py  test_transforms.py  test_type_mapping.py  test_utils.py  test_validators.py  test_yaml_export_import.py
(+79 files in other folders)
