[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaidl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "PyYAML>=6.0.2",
    "rich>=13.9.4",
    "pydantic>=2.10.3",
    "Jinja2>=3.1.4",
    "click>=8.1.7",
    "pyspellchecker>=0.8.0",
    "markdownify>=1.2.2",
    "markdown>=3.10",
    "requests>=2.31.0",
]

[project.scripts]
eaidl = "eaidl.cli:cli"
eaidl_change = "eaidl.cli:change"
eaidl_cli = "eaidl.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "src/eaidl/templates"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "idl-parser>=0.0.17",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "types-PyYAML>=6.0.12.20240917",
]
